# dread-calc

./: README.md  app.py  pyproject.toml
static/: _style.css  grid.css
templates/: footer.html  header.html  index.html  result.html
