[project]
name = "dread-calc2"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Pullan",email = "dan@3264.uk"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "dread_calc2", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
